Fixed Sections Alignment and Height.
Fixed Sections Alignment of:
#Information
#Page Options
#Ready Solutions

Fixed Height of footer.

--- a/css/main.styl
+++ b/css/main.styl
@@ -14,19 +14,10 @@
 
 .full-height
 	height 100vh
-// .Yellow_bg {
-//   background-color: rgb( 255, 210, 0 );
-//   position: absolute;
-//   left: -146px;
-//   top: 3876px;
-//   width: 1704px;
-//   height: 754px;
-//   z-index: 3;
-// }
 
 footer
 	background rgb( 255, 210, 0 )
-	height 400px
+	height 300px
 	overflow auto
 
 	#foot-info
@@ -49,14 +40,12 @@ footer
 				display inline-block
 				border-top 1px solid black
 				font-size 1.1em
-				height 250px
+				height 200px
 				margin 0 2em
 				min-width 185px
 				padding 0 1.5em
 				p
 					letter-spacing 1px
-					// margin-bottom 5px
-
 
 #adventages
 	background-color rgb(243, 240, 231)
@@ -124,17 +113,21 @@ footer
 				padding 0.4em
 
 #information
+	height 90vh
+	position relative
+	top -10vh
 
 	.solutions
+		align-items center
 		display flex
-		height 330px
-		margin 5em auto 1em
+		height 100%
+		justify-content center
 		overflow-x auto
 		padding 0.5em 0 0 1.2em
-		width 86%
+		z-index 0
 
 		.margined
-			margin 0 65px
+			margin 0 10%
 
 		.solution
 			height 300px
@@ -169,35 +162,36 @@ footer
 					&::first-letter
 						font-size 1.5em
 
-	.btn
-		background-color rgba(#E11A27, 0.8)
-		border 1px solid rgba(#E11A27, 0.2)
-		bottom -10%
-		color rgba( 255, 255, 255, 0.9 )
+	.btn-container
+		bottom 10%
 		display flex
-		flex-direction columns
-		font-size 1.3em
-		margin 0 auto
-		padding 0.7em 1.7em
-		position relative
-		transition all 0.5s
+		position absolute
+		width 100%
+		justify-content center
+		.btn
+			background-color rgba(#E11A27, 0.8)
+			border 1px solid rgba(#E11A27, 0.2)
+			color rgba( 255, 255, 255, 0.9 )
+			font-size 1.3em
+			padding 0.7em 1.7em
+			transition all 0.5s
 
-		&:hover
-			border 1px solid rgba(13,13,13,0.2)
-			box-shadow 2px 2px 10px rgba(0,0,0,0.6)
-			text-shadow 1px 1px 1px rgba(0,0,0,0.4)
+			&:hover
+				border 1px solid rgba(13,13,13,0.2)
+				box-shadow 2px 2px 10px rgba(0,0,0,0.6)
+				text-shadow 1px 1px 1px rgba(0,0,0,0.4)
 
 #page-options
+	display flex
+	justify-content center
 	height 350px
 	position relative
 
 	.options
-		display flex
-		margin 0 10%
-		overflow-x auto
-		position absolute
+		align-items center
 		bottom 15%
-		width 85%
+		display flex
+		overflow-x auto
 
 		.option
 			height 250px
@@ -368,31 +362,26 @@ footer
 					width 19px
 
 #ready-solutions
-	overflow auto
-	padding-top 2em
+	align-items flex-end
+	justify-content center
+	display flex
 	position relative
 	transition 0.6s
 
-	h3
-		letter-spacing 2px
-		margin 0
-		text-align center
-		text-transform uppercase
-		&::first-letter
-			font-size 1.3em
-
 	.solutions
 		align-items center
+		bottom 0%
 		display flex
-		flex-direction columns
-		margin 5% auto 0
-		width 80%
+		height 90%
+		overflow-x auto
+		position relative
+		z-index 0
 
 		.solution
 			background rgb(255, 210, 0)
 			border-radius 7px
 			height 420px
-			margin-left 69px
+			margin-left 100px
 			min-width 314px
 			text-align center
 			width 314px
@@ -455,6 +444,18 @@ footer
 					font-size 3em
 					position absolute
 					width 100%
+
+	.title
+		position absolute
+		top 17%
+		h3
+			letter-spacing 2px
+			margin 0
+			text-align center
+			text-transform uppercase
+			top 0
+			&::first-letter
+				font-size 1.3em
 
 #testimonials
 	background #F7F0E6
@@ -554,9 +555,11 @@ footer
 @media only screen and (max-width 700px)
 
 	#information
+		
 		.solutions
-			height 280px
-			width 90%
+			justify-content space-between
+			overflow-x auto
+			width 98%
 
 			.margined
 				margin 0 40px
@@ -584,9 +587,10 @@ footer
 						letter-spacing 3px
 						&::first-letter
 							font-size 1.1em
-
-		.btn
-			transform scale(0.8)
+		.btn-container
+			justify-content center
+			.btn
+				transform scale(0.8)
 
 
 	#adventages
@@ -612,11 +616,7 @@ footer
 
 	#page-options
 		.options
-			bottom 0
-			font-size 0.8em
-			height 230px
-			margin-left 8%
-			
+			// bottom 0			
 			.option
 				height 205px
 
@@ -624,14 +624,15 @@ footer
 
 		.home
 			top 5%
+
 			h1
 				font-size 2em
 
 			h3
-				top 8%
+				top 17%
 
 			.btn
-				top 15%
+				top 25%
 
 		#nav
 			.nav-contact
